--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Websiteville</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main1.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
@@ -26,7 +26,7 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/main1.js"></script>
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
