--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<h1>Websiteville</h1>
 
 			</header>
-			<button>Book an Appointment Now</button>
+			<button>Book an Appointment</button>
 
 		<!-- Footer -->
 			<footer id="footer">
