--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="logo">
-				<img src="assets/img/logo.png">
+			<header class="responsive">
+				<img src="assets/img/logo.png" >
 
 			</header>
 
