--- a/contract.html
+++ b/contract.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>ACE Driving School</title>
+  <title>Websiteville</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -62,7 +62,7 @@
   <section id="intro" class="clearfix">
     <div class="container">
       <div class="intro-info">
-        <h2>Careers</h2>
+        <h2>Contract</h2>
         <div>
 
     </div>
@@ -76,7 +76,6 @@
       <div class="container-fluid">
 
         <div class="section-header">
-          <h3>Ace Driving School is a great place to work!</h3>
         </div>
 
         <div class="row wow fadeInUp">
@@ -84,11 +83,10 @@
           <div class="col-lg-12">
             <div class="form">
               <div class="text-center text-primary">
-              <h3>Submit your Resume!<h3>
                 <div class="cognito">
-                <script src="https://www.cognitoforms.com/s/i8ya9E4UaUiJYxDFhQBBsA"></script>
-                <script>Cognito.load("forms", { id: "12" });</script>
-                </div>
+                  <script src="https://www.cognitoforms.com/s/i8ya9E4UaUiJYxDFhQBBsA"></script>
+                  <script>Cognito.load("forms", { id: "21" });</script>
+                  </div>
           </div>
 
       </div>
