--- a/index.html
+++ b/index.html
@@ -120,7 +120,13 @@
 				  <div class="modal-content">
 					<div class="modal-header">
 					  <span class="close">&times;</span>
-					  <h2>Schedule</h2>
+					  <h2>Thank you so much for your continued support and interest in working with us! At this time, our team is fully booked and we're not taking on new clients.
+
+Feel free to check back with us in the near future, or if you'd like to be added to our waitlist, please send us an email at waitlist@websiteville.ca.
+
+We appreciate your understanding and look forward to potentially working together soon!
+
+— The Websiteville Team</h2>
 					</div>
 					<div class="modal-body">
 					  <!-- <p><iframe src="https://websiteville.youcanbook.me/?noframe=true&skipHeaderFooter=true" id="ycbmiframewebsiteville" style="width:100%;height:1000px;border:0px;background-color:transparent;" frameborder="0" allowtransparency="true"></iframe><script>window.addEventListener && window.addEventListener("message", function(event){if (event.origin === "https://websiteville.youcanbook.me"){document.getElementById("ycbmiframewebsiteville").style.height = "380px";}}, false);</script></p> -->
